<resources>
    <string name="app_name">SuitCheck</string>
    <string name="enter_your_name">Name</string>
    <string name="enter_a_sentence">Palindrom</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="john_doe">John Doe</string>
    <string name="welcome">Welcome</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="avatar_image">avatar</string>
    <string name="first_name">First Name</string>
    <string name="email">email</string>
    <string name="last_name">Last Name</string>
</resources>